# OpenCv

./: build.gradle  settings.gradle
Detection/: CMakeLists.txt  build.gradle
Detection/src/main/: AndroidManifest.xml
Detection/src/main/cpp/: common.h  native-lib.cpp
Detection/src/main/java/com/sunxy/detection/: DetectionUtils.java  ImageUtils.java
Recognition/: build.gradle
Recognition/src/main/: AndroidManifest.xml
Recognition/src/main/java/com/sunxy/recognition/: FileUtils.java  RecognitionUtils.java
app/: build.gradle
app/src/androidTest/java/com/sunxy/sxyimagedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sunxy/sxyimagedetection/: FindIcCardActivity.java  MainActivity.java  ReturnBmpActivity.java  SurfaceViewActivity.java
app/src/main/java/com/sunxy/sxyimagedetection/utils/: BitmapUtils.java
app/src/main/res/layout/: activity_main.xml  find_id_card_layout.xml  return_bmp_layout.xml  surface_view_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sunxy/sxyimagedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
